--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name=".SpotlightApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_spotlight"
         android:label="@string/app_name"
@@ -14,6 +15,16 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_place_api"></meta-data>
+
+        <provider
+            android:authorities="es.dpinfo.spotlightplace"
+            android:name=".provider.SpotlightProvider" />
+
+        <receiver android:name=".receivers.PlaceDeletedReceiver">
+            <intent-filter>
+                <action android:name="es.dpinfo.spotlightplace.DELETED"></action>
+            </intent-filter>
+        </receiver>
 
         <activity android:name=".VerificationActivity">
             <intent-filter>
